# eventator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  hacktoberfest.md
.github/workflows/: add_star.yml
data/: events.json
eventator/: asgi.py  settings.py  urls.py  wsgi.py
events/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
events/management/commands/: seed_events.py
events/migrations/: 0001_initial.py  0002_vote.py
events/templates/events/: base.html  home.html  submissions.html
events/templates/events/includes/: footer.html  head.html
